--- a/onecolumn.html
+++ b/onecolumn.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Royale by TEMPLATED</title>
+		<title>Morgane Dauphin</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -32,16 +32,16 @@
 				
 				<!-- Logo -->
 				<div id="logo">
-					<h1><a href="#">Royale</a></h1>
+					<h1><a href="#">Dauphin Morgane</a></h1>
 				</div>
 				
 				<!-- Nav -->
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Homepage</a></li>
-						<li><a href="twocolumn1.html">Left Sidebar</a></li>
-						<li><a href="twocolumn2.html">Right Sidebar</a></li>
-						<li class="active"><a href="onecolumn.html">No Sidebar</a></li>
+						<li><a href="twocolumn1.html">Ma présentation</a></li>
+						<li><a href="twocolumn2.html">Mes compétences</a></li>
+						<li class="active"><a href="onecolumn.html">Mes expériences</a></li>
 					</ul>
 				</nav>
 
@@ -66,11 +66,12 @@
 				<div class="row">
 					<section>
 						<header>
-							<h2>No Sidebar</h2>
+							<h2>Mes expériences professionnelles</h2>
 						</header>
-						<p>Consectetuer adipiscing elit. Nam pede erat, porta eu, lobortis eget, tempus et, tellus. Etiam neque. Vivamus consequat lorem at nisl. Nullam non wisi a sem semper eleifend. Donec mattis libero eget urna. Duis pretium velit ac mauris. Proin eu wisi suscipit nulla suscipit interdum. Aenean lectus lorem, imperdiet at, ultrices eget, ornare et, wisi. Pellentesque adipiscing purus ac magna. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Pellentesque pede. Donec pulvinar ullamcorper metus. In eu odio at lectus pulvinar mollis. Vestibulum sem magna, elementum ut, vestibulum eu, facilisis quis, arcu. Mauris a dolor. Nulla facilisi. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed blandit. Phasellus pellentesque, ante nec iaculis dapibus, eros justo auctor lectus, a lobortis lorem mauris quis nunc. Praesent pellentesque facilisis elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra.</p>
-						<p>Consectetuer adipiscing elit. Nam pede erat, porta eu, lobortis eget, tempus et, tellus. Etiam neque. Vivamus consequat lorem at nisl. Nullam non wisi a sem semper eleifend. Donec mattis libero eget urna. Duis pretium velit ac mauris. Proin eu wisi suscipit nulla suscipit interdum. Aenean lectus lorem, imperdiet at, ultrices eget, ornare et, wisi. Pellentesque adipiscing purus ac magna. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Pellentesque pede. Donec pulvinar ullamcorper metus. In eu odio at lectus pulvinar mollis. Vestibulum sem magna, elementum ut, vestibulum eu, facilisis quis, arcu. Mauris a dolor. Nulla facilisi. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed blandit. Phasellus pellentesque, ante nec iaculis dapibus, eros justo auctor lectus, a lobortis lorem mauris quis nunc. Praesent pellentesque facilisis elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra.</p>
-						<p>Consectetuer adipiscing elit. Nam pede erat, porta eu, lobortis eget, tempus et, tellus. Etiam neque. Vivamus consequat lorem at nisl. Nullam non wisi a sem semper eleifend. Donec mattis libero eget urna. Duis pretium velit ac mauris. Proin eu wisi suscipit nulla suscipit interdum. Aenean lectus lorem, imperdiet at, ultrices eget, ornare et, wisi. Pellentesque adipiscing purus ac magna. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Pellentesque pede. Donec pulvinar ullamcorper metus. In eu odio at lectus pulvinar mollis. Vestibulum sem magna, elementum ut, vestibulum eu, facilisis quis, arcu. Mauris a dolor. Nulla facilisi. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed blandit. Phasellus pellentesque, ante nec iaculis dapibus, eros justo auctor lectus, a lobortis lorem mauris quis nunc. Praesent pellentesque facilisis elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra.</p>
+							<p>2015 : Stage de 14 semaines réaliser dans le cadre de ma Licence Professionnel Images et Sons Numériques. J'ai donc effectué le mien dans un cabinet d'archtecture et de maitrise d'ouvrage OMHOVER REALISATIONS. Mon sujet de stage était de réalser une vidéo d'une résidence de 40 studio modéliser moi même à partir des plan fournis par l'architecte.</p>
+							<p>2014 - 2015 : Projet tutoré réaliser sur une durée de 4 mois pendant ma Licence Professionnelle Images et Sons Numériques. Ce projet consistait à réaliser une vidéo ludique sur les mines d'argent du XVI°siècle et leurs exploitation avec les techniques de l'époques. Ce projet reprennais une vidéo déjà existante réaliser par les années précédente ou il fallais apporter des modifications suivant les demande de nôtre commanditaire.</p>
+							<p>2014 : job d'été d'une durée de 3 semaines dans une assurance luxembourgeoise <Strong>Foyer assurance</Strong>. J'étais dans le service de sinistre automobile et mon travail étais de trier les constats amiables et envoyer les affaires au différents opérateur téléphonique.</p>
+							<p>2013 : Stage de 5 semaine réaliser dans le cadre de mon BTS Conception Industrialisée Micro-mecanique. Mon stage à été effectué dans l'entreprise PSA Peugeot Citroën, dans l'usine de moteur située à Trémery. Mon projet était alors de chercher les problèmes lié à une machine de calcul ultra précise sur les culasses de moteurs.</p>
 					</section>
 				</div>
 			</div>
@@ -84,21 +85,21 @@
 			<div class="container">
 				<section>
 					<header>
-						<h2>Pellentesque vulputaterisus semper</h2>
+						<h2>Mes dernières réalisations</h2>
 						<span class="byline">In posuere eleifend semper augue maecenas ligula congue rutrum</span>
 					</header>
 					<div class="row">
 						<section class="4u">
-							<a href="#" class="image full"><img src="images/pics03.jpg" alt=""></a>
+							<a href="#" class="image full"><img src="images/20140616_090915.jpg" alt=""></a>
 						</section>
 						<section class="4u">
-							<a href="#" class="image full"><img src="images/pics04.jpg" alt=""></a>
+							<a href="twocolumn1 - illusion.html" class="image full"><img src="images/Photomontage_DAUPHIN_Morgane.jpg" alt=""></a>
 						</section>
 						<section class="4u">
-							<a href="#" class="image full"><img src="images/pics05.jpg" alt=""></a>
+							<a href="twocolumn2 - residence.html" class="image full"><img src="images/table-lit.bmp" alt=""></a>
 						</section>
 					</div>
-					<a href="#" class="button">Nulla luctus eleifend</a>
+					<a href="Gallerie.html" class="button">Gallerie</a>
 				</section>
 			</div>
 		</div>
