--- a/twocolumn2.html
+++ b/twocolumn2.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Royale by TEMPLATED</title>
+		<title>Dauphin Morgane</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -32,16 +32,16 @@
 				
 				<!-- Logo -->
 				<div id="logo">
-					<h1><a href="#">Royale</a></h1>
+					<h1><a href="#">Dauphin Morgane/a></h1>
 				</div>
 				
 				<!-- Nav -->
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Homepage</a></li>
-						<li><a href="twocolumn1.html">Left Sidebar</a></li>
-						<li class="active"><a href="twocolumn2.html">Right Sidebar</a></li>
-						<li><a href="onecolumn.html">No Sidebar</a></li>
+						<li><a href="twocolumn1.html">Ma présentation</a></li>
+						<li class="active"><a href="twocolumn2.html">Mes compétences</a></li>
+						<li><a href="onecolumn.html">Mes expériences</a></li>
 					</ul>
 				</nav>
 
@@ -66,27 +66,33 @@
 					<div id="content" class="9u skel-cell-important">
 						<section>
 							<header>
-								<h2>Right Sidebar</h2>
+								<h2>Mes compétences</h2>
 							</header>
-							<p>Consectetuer adipiscing elit. Nam pede erat, porta eu, lobortis eget, tempus et, tellus. Etiam neque. Vivamus consequat lorem at nisl. Nullam non wisi a sem semper eleifend. Donec mattis libero eget urna. Duis pretium velit ac mauris. Proin eu wisi suscipit nulla suscipit interdum. Aenean lectus lorem, imperdiet at, ultrices eget, ornare et, wisi. Pellentesque adipiscing purus ac magna. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Pellentesque pede. Donec pulvinar ullamcorper metus. In eu odio at lectus pulvinar mollis. Vestibulum sem magna, elementum ut, vestibulum eu, facilisis quis, arcu. Mauris a dolor. Nulla facilisi. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed blandit. Phasellus pellentesque, ante nec iaculis dapibus, eros justo auctor lectus, a lobortis lorem mauris quis nunc. Praesent pellentesque facilisis elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra.</p>
-							<p>Consectetuer adipiscing elit. Nam pede erat, porta eu, lobortis eget, tempus et, tellus. Etiam neque. Vivamus consequat lorem at nisl. Nullam non wisi a sem semper eleifend. Donec mattis libero eget urna. Duis pretium velit ac mauris. Proin eu wisi suscipit nulla suscipit interdum. Aenean lectus lorem, imperdiet at, ultrices eget, ornare et, wisi. Pellentesque adipiscing purus ac magna. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Pellentesque pede. Donec pulvinar ullamcorper metus. In eu odio at lectus pulvinar mollis. Vestibulum sem magna, elementum ut, vestibulum eu, facilisis quis, arcu. Mauris a dolor. Nulla facilisi. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed blandit. Phasellus pellentesque, ante nec iaculis dapibus, eros justo auctor lectus, a lobortis lorem mauris quis nunc. Praesent pellentesque facilisis elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra.</p>
-							<p>Consectetuer adipiscing elit. Nam pede erat, porta eu, lobortis eget, tempus et, tellus. Etiam neque. Vivamus consequat lorem at nisl. Nullam non wisi a sem semper eleifend. Donec mattis libero eget urna. Duis pretium velit ac mauris. Proin eu wisi suscipit nulla suscipit interdum. Aenean lectus lorem, imperdiet at, ultrices eget, ornare et, wisi. Pellentesque adipiscing purus ac magna. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Pellentesque pede. Donec pulvinar ullamcorper metus. In eu odio at lectus pulvinar mollis. Vestibulum sem magna, elementum ut, vestibulum eu, facilisis quis, arcu. Mauris a dolor. Nulla facilisi. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed blandit. Phasellus pellentesque, ante nec iaculis dapibus, eros justo auctor lectus, a lobortis lorem mauris quis nunc. Praesent pellentesque facilisis elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra.</p>
+								<p>Grâce à mon changement de branche et à mon choix d'études je dispose d'un éventail trés large de compétences me permettant de travailler dans des domaines trés différents allant de l'industrie (bureau d'étude et usinage) à l'architecture(modélisation et dessins de plan), en passant par la médecine (modélisation et réglage de machines), la communication (webdesign, vidéos promotionnelles, retouche et montage photo). Toutes ces connaissances me permettent de m'adapter facilement aux tâches que l'ont me demandera de réaliser.</p>
+								<p>En plus d'avoir appris de nombreuses techniques, j'ai également appris à utiliser divers logiciels, que ce soit de bureautiques, de montage vidéo, de modélisation et d'infographie. Le fait d'avoir appris à utiliser beaucoup de logiciels me permettra ainsi de pouvoir reconnaitre et utiliser plus facile des interface de logiciels que je n'aurais pas encore appris à utiliser.</p>
+								<p>Je vais donc vous présenter une liste exhaustive des différent logiciels que j'ai appris à utiliser, mais celle-ci ne m'empéche en aucun cas d'en apprendre de nouveau si besoin.</p>
+								<p><a>Logiciels de modélisation</a> : Solidworks (industriel), Catia Dassault System (industriel), Blender (Design), 3Ds max (Design), Géomagic, Vectorworks (Design), Google SketchUp (Design), Unity3D (Design / Jeux vidéo).</p>
+								<p><a>Logiciels de montage vidéo</a> : Adobe Premiere, Sony Vegas, Windows Movie Maker.</p>
+								<p><a>Logiciels de traitements d'images</a> : Adobe Illustrator, Adobe Photoshop, Gimp, Paint.</p>
+								<p><a>Logiciels de bureautiques</a> : Adobe InDesign, Microsoft Word, PowerPoint, Open Office (LibreOffice).</p>
+								<p> </p>
+								<p>Je possède également des notions de langages de programmation : Java, Java3D, C# (Csharp) et Maxscript. Pour exemple du langage de programmation HTML, c'est moi qui ai réaliser ce site avec pour style un template gratuit : Royal by <a href="http://templated.co">TEMPLATED</a>.</p>
 						</section>
 					</div>
 					<div id="sidebar" class="3u">
 						<section>
 							<header>
-								<h2>Donec dictum</h2>
+								<h2>Modélisation</h2>
 							</header>
 							<a href="#" class="image full"><img src="images/pics07.jpg" alt=""></a>
-							<p>Pellentesque viverra  enim.Tristique ante ut risus. Quisque dictum. Integer nisl elementum.</p>
+							<p>La modélisation tridimensionnelle est l'étape en infographie tridimensionnelle qui consiste à créer, dans un logiciel de modélisation 3D, un objet en trois dimensions, par ajout, soustraction et modifications de ses constituants.(source : Wikipédia)</p>
 						</section>
 						<section>
 							<header>
-								<h2>Sagittis convallis</h2>
+								<h2>Infographie</h2>
 							</header>
 							<a href="#" class="image full"><img src="images/pics08.jpg" alt=""></a>
-							<p>Quisque dictum. Integer nisl risus, sagittis convallis elementum.</p>
+							<p>L'infographie est le domaine de la création d'images numériques assistée par ordinateur. Ce qui comprend : retouche photographique, mise en couleur de bandes dessinées, habillage de perspectives architecturales, etc... (source : Wikipédia)</p>
 						</section>
 					</div>
 				</div>
@@ -101,21 +107,21 @@
 			<div class="container">
 				<section>
 					<header>
-						<h2>Pellentesque vulputaterisus semper</h2>
+						<h2>Mes dernières réalisations</h2>
 						<span class="byline">In posuere eleifend semper augue maecenas ligula congue rutrum</span>
 					</header>
 					<div class="row">
 						<section class="4u">
-							<a href="#" class="image full"><img src="images/pics03.jpg" alt=""></a>
+							<a href="twocolumn1 - compositing.html" class="image full"><img src="images/rendu_maison_DAUPHIN.jpg" alt=""></a>
 						</section>
 						<section class="4u">
-							<a href="#" class="image full"><img src="images/pics04.jpg" alt=""></a>
+							<a href="twocolumn1 - illusion.html" class="image full"><img src="images/Photomontage_DAUPHIN_Morgane.jpg" alt=""></a>
 						</section>
 						<section class="4u">
-							<a href="#" class="image full"><img src="images/pics05.jpg" alt=""></a>
+							<a href="twocolumn2 - residence.html" class="image full"><img src="images/AFAEDAM_perspective.bmp" alt=""></a>
 						</section>
 					</div>
-					<a href="#" class="button">Nulla luctus eleifend</a>
+					<a href="Gallerie.html" class="button">Gallerie</a>
 				</section>
 			</div>
 		</div>
