--- a/twocolumn2.html
+++ b/twocolumn2.html
@@ -32,7 +32,7 @@
 				
 				<!-- Logo -->
 				<div id="logo">
-					<h1><a href="#">Dauphin Morgane/a></h1>
+					<h1><a href="#">Dauphin Morgane</a></h1>
 				</div>
 				
 				<!-- Nav -->
