correction des fautes compétences

--- a/twocolumn2.html
+++ b/twocolumn2.html
@@ -68,15 +68,15 @@
 							<header>
 								<h2>Mes compétences</h2>
 							</header>
-								<p>Grâce à mon changement de branche et à mon choix d'études je dispose d'un éventail trés large de compétences me permettant de travailler dans des domaines trés différents allant de l'industrie (bureau d'étude et usinage) à l'architecture(modélisation et dessins de plan), en passant par la médecine (modélisation et réglage de machines), la communication (webdesign, vidéos promotionnelles, retouche et montage photo). Toutes ces connaissances me permettent de m'adapter facilement aux tâches que l'ont me demandera de réaliser.</p>
-								<p>En plus d'avoir appris de nombreuses techniques, j'ai également appris à utiliser divers logiciels, que ce soit de bureautiques, de montage vidéo, de modélisation et d'infographie. Le fait d'avoir appris à utiliser beaucoup de logiciels me permettra ainsi de pouvoir reconnaitre et utiliser plus facile des interface de logiciels que je n'aurais pas encore appris à utiliser.</p>
-								<p>Je vais donc vous présenter une liste exhaustive des différent logiciels que j'ai appris à utiliser, mais celle-ci ne m'empéche en aucun cas d'en apprendre de nouveau si besoin.</p>
+								<p>Grâce à mon changement de branche et à mon choix d'études je dispose d'un éventail trés large de compétences me permettant de travailler dans des domaines trés différents allant de l'industrie (bureau d'étude et usinage) à l'architecture (modélisation et dessins de plan), en passant par la médecine (modélisation et réglage de machines), la communication (webdesign, vidéos promotionnelles, retouche et montage photo). Toutes ces connaissances me permettent de m'adapter facilement aux tâches que l'on me demandera de réaliser.</p>
+								<p>En plus d'avoir appris de nombreuses techniques, j'ai également appris à utiliser divers logiciels, que ce soit de bureautique, de montage vidéo, de modélisation et d'infographie. Le fait d'avoir appris à utiliser beaucoup de logiciels me permettra ainsi de pouvoir reconnaitre et utiliser plus facilement des interface de logiciels que je n'aurais pas encore appris à utiliser.</p>
+								<p>Je vais donc vous présenter une liste exhaustive des différents logiciels que j'ai appris à utiliser, mais celle-ci ne m'empéche en aucun cas d'en apprendre de nouveau si besoin.</p>
 								<p><a>Logiciels de modélisation</a> : Solidworks (industriel), Catia Dassault System (industriel), Blender (Design), 3Ds max (Design), Géomagic, Vectorworks (Design), Google SketchUp (Design), Unity3D (Design / Jeux vidéo).</p>
 								<p><a>Logiciels de montage vidéo</a> : Adobe Premiere, Sony Vegas, Windows Movie Maker.</p>
 								<p><a>Logiciels de traitements d'images</a> : Adobe Illustrator, Adobe Photoshop, Gimp, Paint.</p>
 								<p><a>Logiciels de bureautiques</a> : Adobe InDesign, Microsoft Word, PowerPoint, Open Office (LibreOffice).</p>
 								<p> </p>
-								<p>Je possède également des notions de langages de programmation : Java, Java3D, C# (Csharp) et Maxscript. Pour exemple du langage de programmation HTML, c'est moi qui ai réaliser ce site avec pour style un template gratuit : Royal by <a href="http://templated.co">TEMPLATED</a>.</p>
+								<p>Je possède également des notions de langages de programmation : Java, Java3D, C# (Csharp) et Maxscript. Pour exemple du langage de programmation HTML, c'est moi qui ai réalisé ce site avec pour style un template gratuit : Royal by <a href="http://templated.co">TEMPLATED</a>.</p>
 						</section>
 					</div>
 					<div id="sidebar" class="3u">
@@ -85,7 +85,7 @@
 								<h2>Modélisation</h2>
 							</header>
 							<a href="#" class="image full"><img src="images/pics07.jpg" alt=""></a>
-							<p>La modélisation tridimensionnelle est l'étape en infographie tridimensionnelle qui consiste à créer, dans un logiciel de modélisation 3D, un objet en trois dimensions, par ajout, soustraction et modifications de ses constituants.(source : Wikipédia)</p>
+							<p>La modélisation tridimensionnelle est l'étape en infographie tridimensionnelle qui consiste à créer, dans un logiciel de modélisation 3D, un objet en trois dimensions, par ajout, soustraction et modifications de ses constituants. (source : Wikipédia)</p>
 						</section>
 						<section>
 							<header>
