--- a/twocolumn1 - illusion.html
+++ b/twocolumn1 - illusion.html
@@ -85,10 +85,10 @@
 							<header>
 								<h2>Illusion d'optique</h2>
 							</header>
-							<p>Dans le cadre de la découverte de photoshop lors de ma Licence Professionnelle Image et Sons Numérique, on nous a demander de réaliser un montage photo sur le théme de l'illusion d'optique.</p>
-							<p>Aprés avir effectuer des recherches pour me faire une idée de ce que je pourrais réaliser comme illusion d'optique, je me suis décider d'en faire un donnant l'impression qu'il y a plusieurs ranger de colonne alors qu'en réalité, il n'y en a qu'une. Pour cela j'ai pris des chevaux que j'ai découper à l'endroit des colonne pour que l'ont ai l'impression que ce dernier passe dérrière le pilier. J'ai répéter cette opértion plusieurs fois pour donner ce résultat. </p>
+							<p>Dans le cadre de la découverte de photoshop lors de ma Licence Professionnelle Images et Sons Numériques, on nous a demandé de réaliser un montage photo sur le théme de l'illusion d'optique.</p>
+							<p>Aprés avoir effectuer des recherches pour me faire une idée de ce que je pourrais réaliser comme illusion d'optique, je me suis décidée d'en faire une donnant l'impression qu'il y a plusieurs rangées de colonnes alors qu'en réalité, il n'y en a qu'une. Pour cela j'ai pris des chevaux que j'ai découpé à l'endroit des colonnes pour que l'on ait l'impression que ce dernier passe derrière le pilier. J'ai répété cette opértion plusieurs fois pour donner ce résultat. </p>
 							<p>Montage photo réalisé avec le logiciel : Adobe Photoshop.</p>
-							<p>Année de réalisation du projet : 2014, durant mes études à Saint Diés en LP ISN</p>
+							<p>Année de réalisation du projet : 2014, durant mes études à Saint-Dié-des-Vosges en LP ISN</p>
 						</section>
 					</div>
 					
