--- a/twocolumn2 - residence.html
+++ b/twocolumn2 - residence.html
@@ -68,9 +68,12 @@
 							<header>
 								<h2>Résidence de 40 Studios</h2>
 							</header>
-							<p>Lors de ma licence professionnelle, je devais effectué un stage en entreprise. Je l'ai réaliser dans l'entreprise <a>OMHOVER REALISATIONS</a>. Mon projet était de réaliser un film de présentation d'un bâtiment qui était encore alors en construction. C'est donc à partir de plans fournis par l'architecte que j'ai modéliser entièrement l'intérieur du bâtiment avec l'entrée princippale et son forum, le restaurant intérieur et la terrasse extérieur.</p>
-							<p>Dans un deuxième temps j'ai également modéliser l'intérieur d'un des 40 studio que compte cette résidence pour personnes handicapées vieillissantes. Je n'ai  réaliser que l'intérieur d'un seul studio qui sera montrer séparément par une coupure dans la vidéo du bâtiment extérieur.</p>
-							<p>Lors de la réalisation de ces modélisation j'ai scrupuleusement respecter les plans qui m'étaient fournis. Mais le choix du style et des formes des meubles ont été de ma propre interprétation aprés validation de mon commanditaire.</p>
+							<p>Lors de ma licence professionnelle, je devais effectuer un stage en entreprise. Je l'ai réalisé dans l'entreprise <a>OMHOVER REALISATIONS</a>. Mon projet était de réaliser un film de présentation d'un bâtiment qui était encore alors en construction. C'est donc à partir de plans fournis par l'architecte que j'ai modélisé entièrement l'intérieur du bâtiment avec l'entrée principale, son forum, le restaurant intérieur et la terrasse extérieure.</p>
+							<p>Dans un deuxième temps j'ai également modélisé l'intérieur d'un des 40 studios que compte cette résidence pour personnes handicapées vieillissantes. Je n'ai  réalisé que l'intérieur d'un seul studio qui sera montré séparément par une coupure dans la vidéo du bâtiment extérieur.</p>
+							<p>Lors de la réalisation de ces modélisations j'ai scrupuleusement respecté les plans qui m'étaient fournis. Mais le choix du style et des formes des meubles ont été de ma propre interprétation aprés validation de mon commanditaire.</p>
+							<p><Strong>Logiciels utilisés</Strong> : 3Ds Max Studio, Adobe Photoshop, Adobe Premiere.</p>
+							<p><Strong>Sites utilisés pour les textures</Strong> : CgTexture, CgSkies</p>
+							<p><Strong>Année de réalisation</Strong> : 2015, durant un stage dans un cabinet d'achitecte.</p>
 						</section>
 					</div>
 					<div id="sidebar" class="3u">
