--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
 			<div class="container">
 				<section>
 					<header>
-						<h2>Mes dérnières réalisations</h2>
-						<span class="byline">In posuere eleifend semper augue maecenas ligula congue rutrum</span>
+						<h2>Mes dernières réalisations</h2>
+						<span class="byline">Une gallerie d'images de toutes mes réalisations jusqu'à ce jour.</span>
 					</header>
 					<div class="row">
 						<section class="4u">
