--- a/twocolumn2 - robotmarcheur.html
+++ b/twocolumn2 - robotmarcheur.html
@@ -66,30 +66,29 @@
 					<div id="content" class="9u skel-cell-important">
 						<section>
 							<header>
-								<h2>Résidence de 40 Studios</h2>
+								<h2>Robot Marcheur</h2>
 							</header>
-							<p>Lors de ma licence professionnelle, je devais effectuer un stage en entreprise. Je l'ai réalisé dans l'entreprise <a>OMHOVER REALISATIONS</a>. Mon projet était de réaliser un film de présentation d'un bâtiment qui était encore alors en construction. C'est donc à partir de plans fournis par l'architecte que j'ai modélisé entièrement l'intérieur du bâtiment avec l'entrée principale, son forum, le restaurant intérieur et la terrasse extérieure.</p>
-							<p>Dans un deuxième temps j'ai également modélisé l'intérieur d'un des 40 studios que compte cette résidence pour personnes handicapées vieillissantes. Je n'ai  réalisé que l'intérieur d'un seul studio qui sera montré séparément par une coupure dans la vidéo du bâtiment extérieur.</p>
-							<p>Lors de la réalisation de ces modélisations j'ai scrupuleusement respecté les plans qui m'étaient fournis. Mais le choix du style et des formes des meubles ont été de ma propre interprétation aprés validation de mon commanditaire.</p>
-							<p><Strong>Logiciels utilisés</Strong> : 3Ds Max Studio, Adobe Photoshop, Adobe Premiere.</p>
-							<p><Strong>Sites utilisés pour les textures</Strong> : CgTexture, CgSkies</p>
-							<p><Strong>Année de réalisation</Strong> : 2015, durant un stage dans un cabinet d'achitecte.</p>
+							<p>Lors de mon BTS, je devais effectuer un projet mécanique en groupe. Ce projet devais être travailler sur la dernière année du BTS et contenir pour chaque personne une pièce à injecter en plastique à l'aide d'un moule industriel. Aprés nous être concerter nous avons décider de réaliser un robot marcheur fonctionnant grâce à une télécommande.</p>
+							<p>Nous avons décider de réaliser un robot ayant 6 pattes pour une meilleurs stabilité, et ces 6 pattes était diviser en 2 groupe contrôler pour chaque groupe par 1 moteur. Il Fallait donc réfléchir à un schéma cinématique complèxe pour le faire avancer avec uniquement 2 moteur.</p>
+							<p>Pour réaliser ce robot nous l'avons déjà modéliser aprés avoir effectuer des recherches et réfléchit à son mode de déplacement. Nous avons ensuite utiliser cette modélisation pour faire les plans des pièces qui serons réaliser en atelier à la mains et programmer l'usinage des autres sur les machines à commande numérique. Pour finir chaque membre du groupe choisisais une pièce qu'il réaliserait à l'aide d'un moule, la mienne était la biellette.</p>
+							<p><Strong>Logiciels utilisés</Strong> : Catia Dassault System.</p>
+							<p><Strong>Année de réalisation</Strong> : 2013 - 2014, durant mon BTS CIM.</p>
 						</section>
 					</div>
 					<div id="sidebar" class="3u">
 						<section>
 							<header>
-								<h2>Extérieur du bâtiment</h2>
+								<h2>Robot modéliser</h2>
 							</header>
-							<a href="#" class="image full"><img src="images/Vue exterieur Zoom0600.jpg" alt=""></a>
-							<p>Vue en mode extérieur du bâtiment. Extrait de la vidéo.</p>
+							<a href="#" class="image full"><img src="images/robot_marcheur_catia.png" alt=""></a>
+							<p>Voici ce à quoi ressemblais notre robot sur notre logiciel de modélisation.</p>
 						</section>
 						<section>
 							<header>
-								<h2>Intérieur d'un studio</h2>
+								<h2>Robot finis</h2>
 							</header>
-							<a href="#" class="image full"><img src="images/table-lit.bmp" alt=""></a>
-							<p>Extrait de la vidéo sur l'intérieur du studio ou l'ont peut voir le lit et la table.</p>
+							<a href="#" class="image full"><img src="images/20140616_090915.jpg" alt=""></a>
+							<p>Voici notre robot une fois fini.</p>
 						</section>
 					</div>
 				</div>
@@ -112,7 +111,7 @@
 							<a href="twocolumn1 - illusion.html" class="image full"><img src="images/Photomontage_DAUPHIN_Morgane.jpg" alt=""></a>
 						</section>
 						<section class="4u">
-							<a href="#" class="image full"><img src="images/RenduBlenderJaponaise.png" alt=""></a>
+							<a href="twocolumn1 - salonjaponais.html" class="image full"><img src="images/RenduBlenderJaponaise.png" alt=""></a>
 						</section>
 						<section class="4u">
 							<a href="twocolumn1 - compositing.html" class="image full"><img src="images/rendu_maison_DAUPHIN.jpg" alt=""></a>
