--- a/Gallerie.html
+++ b/Gallerie.html
@@ -73,7 +73,7 @@
 							<a href="twocolumn2 - residence.html" class="image full"><img src="images/table-lit.bmp" alt=""></a>
 						</section>
 						<section class="4u">
-							<a href="#" class="image full"><img src="images/RenduBlenderJaponaise.png" alt=""></a>
+							<a href="twocolumn1 - salonjaponais.html" class="image full"><img src="images/RenduBlenderJaponaise.png" alt=""></a>
 						</section>
 						<section class="4u">
 							<a href="twocolumn1 - illusion.html" class="image full"><img src="images/Photomontage_DAUPHIN_Morgane.jpg" alt=""></a>
@@ -85,10 +85,10 @@
 							<a href="twocolumn1 - compositing.html" class="image full"><img src="images/rendu_maison_DAUPHIN.jpg" alt=""></a>
 						</section>
 						<section class="4u">
-							<a href="#" class="image full"><img src="images/20140616_090915.jpg" alt=""></a>
+							<a href="twocolumn2 - robotmarcheur.html" class="image full"><img src="images/20140616_090915.jpg" alt=""></a>
 						</section>
 						<section class="4u">
-							<a href="#" class="image full"><img src="images/Scene_final_DAUPHIN_Morgane.png" alt=""></a>
+							<a href="twocolumn2 - salonblender.html" class="image full"><img src="images/Scene_final_DAUPHIN_Morgane.png" alt=""></a>
 						</section>
 					</div>
 				</div>
@@ -107,17 +107,9 @@
 						<span class="byline">In posuere eleifend semper augue maecenas ligula congue rutrum</span>
 					</header>
 					<div class="row">
-						<section class="4u">
-							<a href="#" class="image full"><img src="images/pics03.jpg" alt=""></a>
-						</section>
-						<section class="4u">
-							<a href="#" class="image full"><img src="images/pics04.jpg" alt=""></a>
-						</section>
-						<section class="4u">
-							<a href="#" class="image full"><img src="images/pics05.jpg" alt=""></a>
-						</section>
+						
 					</div>
-					<a href="#" class="button">Gallerie</a>
+					<a href="index.html" class="button">Retour Homepage</a>
 				</section>
 			</div>
 		</div>
