--- a/twocolumn1 - illusion.html
+++ b/twocolumn1 - illusion.html
@@ -112,7 +112,7 @@
 							<a href=" twocolumn1 - illusion.html" class="image full"><img src="images/table-lit.bmp" alt=""></a>
 						</section>
 						<section class="4u">
-							<a href="#" class="image full"><img src="images/RenduBlenderJaponaise.png" alt=""></a>
+							<a href="twocolumn1 - salonjaponais.html" class="image full"><img src="images/RenduBlenderJaponaise.png" alt=""></a>
 						</section>
 						<section class="4u">
 							<a href="twocolumn1 - compositing.html" class="image full"><img src="images/rendu_maison_DAUPHIN.jpg" alt=""></a>
