ajout lien robot

--- a/twocolumn1 - compositing.html
+++ b/twocolumn1 - compositing.html
@@ -109,7 +109,7 @@
 					</header>
 					<div class="row">
 						<section class="4u">
-							<a href="#" class="image full"><img src="images/20140616_090915.jpg" alt=""></a>
+							<a href=" twocolumn2 - robotmarcheur.html" class="image full"><img src="images/20140616_090915.jpg" alt=""></a>
 						</section>
 						<section class="4u">
 							<a href="twocolumn1 - illusion.html" class="image full"><img src="images/Photomontage_DAUPHIN_Morgane.jpg" alt=""></a>
