Correction lien sur homepage

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 						</header>
 						<a href="#" class="image full"><img src="images/RenduBlenderJaponaise.png" alt=""></a>
 						<p>Modélisation d'une scène prenant ploace dans un salon de style japonais donnant sur le jardin de nuit..</p>
-						<a href="#" class="button">Read More</a>
+						<a href="twocolumn1 - salonjaponais.html" class="button">Read More</a>
 					</section>
 					<section class="3u">
 						<header>
