Ajout d'image compétences

--- a/twocolumn2.html
+++ b/twocolumn2.html
@@ -84,14 +84,14 @@
 							<header>
 								<h2>Modélisation</h2>
 							</header>
-							<a href="#" class="image full"><img src="images/pics07.jpg" alt=""></a>
+							<a href="#" class="image full"><img src="images/Exemple_modélisation.jpg" alt=""></a>
 							<p>La modélisation tridimensionnelle est l'étape en infographie tridimensionnelle qui consiste à créer, dans un logiciel de modélisation 3D, un objet en trois dimensions, par ajout, soustraction et modifications de ses constituants. (source : Wikipédia)</p>
 						</section>
 						<section>
 							<header>
 								<h2>Infographie</h2>
 							</header>
-							<a href="#" class="image full"><img src="images/pics08.jpg" alt=""></a>
+							<a href="#" class="image full"><img src="images/Exemple_Infographie.jpg" alt=""></a>
 							<p>L'infographie est le domaine de la création d'images numériques assistée par ordinateur. Ce qui comprend : retouche photographique, mise en couleur de bandes dessinées, habillage de perspectives architecturales, etc... (source : Wikipédia)</p>
 						</section>
 					</div>
