--- a/twocolumn1 - salonjaponais.html
+++ b/twocolumn1 - salonjaponais.html
@@ -66,28 +66,28 @@
 					<div id="sidebar" class="3u">
 						<section>
 							<header>
-								<h2>Avant retouche</h2>
+								<h2>Image finale</h2>
 							</header>
-							<a href="#" class="image full"><img src="images/cheval.jpg" alt=""></a>
-							<p>Image d'un des chevaux avant montage photo.</p>
+							<a href="#" class="image full"><img src="images/RenduBlenderJaponaise.png" alt=""></a>
+							<p>Rendu Blender de la scène modéliser.</p>
 						</section>
 						<section>
 							<header>
-								<h2>Aprés retouche</h2>
+								<h2>Images ayant servie de modéle</h2>
 							</header>
-							<a href="#" class="image full"><img src="images/Photomontage_DAUPHIN_Morgane.jpg" alt=""></a>
-							<p>Résultat finale aprés retouche avec le logiciel Photoshop.</p>
+							<a href="#" class="image full"><img src="images/Image d'inspiration pour scène japonaise.jpg" alt=""></a>
+							<p>Image d'inspiration pour les meubles et le style japonais.</p>
 						</section>
 					</div>
 					
 					<div id="content" class="9u skel-cell-important">
 						<section>
 							<header>
-								<h2>Illusion d'optique</h2>
+								<h2>Scène Japonaise</h2>
 							</header>
-							<p>Dans le cadre de la découverte de photoshop lors de ma Licence Professionnelle Images et Sons Numériques, on nous a demandé de réaliser un montage photo sur le théme de l'illusion d'optique.</p>
-							<p>Aprés avoir effectuer des recherches pour me faire une idée de ce que je pourrais réaliser comme illusion d'optique, je me suis décidée d'en faire une donnant l'impression qu'il y a plusieurs rangées de colonnes alors qu'en réalité, il n'y en a qu'une. Pour cela j'ai pris des chevaux que j'ai découpé à l'endroit des colonnes pour que l'on ait l'impression que ce dernier passe derrière le pilier. J'ai répété cette opértion plusieurs fois pour donner ce résultat. </p>
-							<p>Montage photo réalisé avec le logiciel : Adobe Photoshop.</p>
+							<p>Dans le cadre de la découverte de Blender un logiciel de modélisation gratuit, nous avons eu comme projet donner au cours de la Licence Professionnelle Images et Sons Numériques de réaliser un salon, réaliste ou non, le style était de notre choix pour laisser libre cours à notre imagination. Je me suis donc inspirer d'un style japonais car je m'intéresse beaucoup à cette culture. J'ai ajout une ambiance de nuit avec un petit effets surréaliste en mettant en scène dans le jardin des lumière surréaliste.</p>
+							<p>La scène est composée du salon et d'une vue sur le jardin bien que celui-ci soit peu visible à cause des ombres de la nuit. Pour finir j'ai fais une courte animation qui permet de parcourir la scène. </p>
+							<p>Modélisation réalisé avec le logiciel : Blender.</p>
 							<p>Année de réalisation du projet : 2014, durant mes études à Saint-Dié-des-Vosges en LP ISN</p>
 						</section>
 					</div>
@@ -109,10 +109,10 @@
 					</header>
 					<div class="row">
 						<section class="4u">
-							<a href=" twocolumn1 - illusion.html" class="image full"><img src="images/table-lit.bmp" alt=""></a>
+							<a href="twocolumn1 - illusion.html" class="image full"><img src="images/table-lit.bmp" alt=""></a>
 						</section>
 						<section class="4u">
-							<a href="#" class="image full"><img src="images/RenduBlenderJaponaise.png" alt=""></a>
+							<a href="twocolumn2 - robotmarcheur.html" class="image full"><img src="images/robot_marcheur_catia.png" alt=""></a>
 						</section>
 						<section class="4u">
 							<a href="twocolumn1 - compositing.html" class="image full"><img src="images/rendu_maison_DAUPHIN.jpg" alt=""></a>
