--- a/twocolumn2 - salonblender.html
+++ b/twocolumn2 - salonblender.html
@@ -105,7 +105,7 @@
 				<section>
 					<header>
 						<h2>Mes dernières réalisations</h2>
-						<span class="byline">In posuere eleifend semper augue maecenas ligula congue rutrum</span>
+						<span class="byline">Une gallerie d'images de toutes mes réalisations jusqu'à ce jour.</span>
 					</header>
 					<div class="row">
 						<section class="4u">
