--- a/index.html
+++ b/index.html
@@ -67,8 +67,9 @@
 						<header>
 							<h2>Présentation</h2>
 						</header>
-						<p>Ce site est un <strong>portefolio</strong> de mes réalisation dans le domaine du design mais également sur mes projets de pièces ou systèmes mécanisés. Il présente également une présentation de mon parcours et de mes compétences acquises que ce soit au cours de mes études mais aussi mes projets personnelles. Ce site contenant ainsi tout mes projets réalisé depuis mes débuts, on peut voir mon évolution dans le domaine de l'infographie et de la modélisation.</p>
-						<p>J'ai été passionnée par ce domaine car l'infographie et la modélisation 3D peut nous permettre de réaliser tout ce que nous imaginons.</p>
+						<p>Je suis passionnée par l'infographie et la modélisation 3D car cela peut me permettre de réaliser tout ce que j'imagine.</p>
+						<p>J'ai crée ce site afin de présenter un <strong>portefolio</strong> de mes projets dans le domaine du design mais également dans le domaine de l'industrie. Il propose aussi une présentation de mon parcours et de mes compétences acquises au cours de mes études et de mes projets personnels. Ce site montre ainsi tout mes projets réalisé depuis mes débuts, on peut y remarquer mon évolution dans le domaine de l'infographie et de la modélisation 3D.</p>
+						<p>Bien entendu je veux encore développer mes compétences artistique pour obtenir des résultats de plus en plus proches, soit de la demande d'un commanditaire, soit en corrélation avec mon imaginaire.</p>
 					</section>
 				</div>
 				<div class="divider"></div>
