--- a/twocolumn1 - salonjaponais.html
+++ b/twocolumn1 - salonjaponais.html
@@ -85,9 +85,9 @@
 							<header>
 								<h2>Scène Japonaise</h2>
 							</header>
-							<p>Dans le cadre de la découverte de Blender un logiciel de modélisation gratuit, nous avons eu comme projet donner au cours de la Licence Professionnelle Images et Sons Numériques de réaliser un salon, réaliste ou non, le style était de notre choix pour laisser libre cours à notre imagination. Je me suis donc inspirer d'un style japonais car je m'intéresse beaucoup à cette culture. J'ai ajout une ambiance de nuit avec un petit effets surréaliste en mettant en scène dans le jardin des lumière surréaliste.</p>
-							<p>La scène est composée du salon et d'une vue sur le jardin bien que celui-ci soit peu visible à cause des ombres de la nuit. Pour finir j'ai fais une courte animation qui permet de parcourir la scène. </p>
-							<p>Modélisation réalisé avec le logiciel : Blender.</p>
+							<p>Dans le cadre de la découverte de Blender un logiciel de modélisation gratuit, on nous a donné comme projet au cours de la Licence Professionnelle Images et Sons Numériques de réaliser un salon, réaliste ou non, le style était de notre choix pour laisser libre cours à notre imagination. Je me suis donc inspiré du style japonais car je m'intéresse beaucoup à cette culture. J'ai ajouté une ambiance de nuit avec un petit effets imaginaire en mettant en scène des lumières surréalistes dans le jardin.</p>
+							<p>La scène est composée du salon et d'une vue sur le jardin bien que celui-ci soit peu visible à cause des ombres de la nuit. Pour finir j'ai fait une courte animation qui permet de parcourir la scène. </p>
+							<p>Modélisation réalisée avec le logiciel : Blender.</p>
 							<p>Année de réalisation du projet : 2014, durant mes études à Saint-Dié-des-Vosges en LP ISN</p>
 						</section>
 					</div>
