--- a/twocolumn1 - salonjaponais.html
+++ b/twocolumn1 - salonjaponais.html
@@ -85,7 +85,7 @@
 							<header>
 								<h2>Scène Japonaise</h2>
 							</header>
-							<p>Dans le cadre de la découverte de Blender un logiciel de modélisation gratuit, on nous a donné comme projet au cours de la Licence Professionnelle Images et Sons Numériques de réaliser un salon, réaliste ou non, le style était de notre choix pour laisser libre cours à notre imagination. Je me suis donc inspiré du style japonais car je m'intéresse beaucoup à cette culture. J'ai ajouté une ambiance de nuit avec un petit effets imaginaire en mettant en scène des lumières surréalistes dans le jardin.</p>
+							<p>Dans le cadre de la découverte de Blender un logiciel de modélisation gratuit, on nous a donné comme projet au cours de la Licence Professionnelle Images et Sons Numériques de modéliser un salon, réaliste ou non, le style était de notre choix pour laisser libre cours à notre imagination. Je me suis donc inspiré du style japonais car je m'intéresse beaucoup à cette culture. J'ai ajouté une ambiance de nuit avec un petit effet imaginaire en mettant en scène des lumières surréalistes dans le jardin.</p>
 							<p>La scène est composée du salon et d'une vue sur le jardin bien que celui-ci soit peu visible à cause des ombres de la nuit. Pour finir j'ai fait une courte animation qui permet de parcourir la scène. </p>
 							<p>Modélisation réalisée avec le logiciel : Blender.</p>
 							<p>Année de réalisation du projet : 2014, durant mes études à Saint-Dié-des-Vosges en LP ISN</p>
