--- a/twocolumn2 - robotmarcheur.html
+++ b/twocolumn2 - robotmarcheur.html
@@ -68,10 +68,10 @@
 							<header>
 								<h2>Robot Marcheur</h2>
 							</header>
-							<p>Lors de mon BTS, je devais effectuer un projet mécanique en groupe. Ce projet devais être travailler sur la dernière année du BTS et contenir pour chaque personne une pièce à injecter en plastique à l'aide d'un moule industriel. Aprés nous être concerter nous avons décider de réaliser un robot marcheur fonctionnant grâce à une télécommande.</p>
-							<p>Nous avons décider de réaliser un robot ayant 6 pattes pour une meilleurs stabilité, et ces 6 pattes était diviser en 2 groupe contrôler pour chaque groupe par 1 moteur. Il Fallait donc réfléchir à un schéma cinématique complèxe pour le faire avancer avec uniquement 2 moteur.</p>
-							<p>Pour réaliser ce robot nous l'avons déjà modéliser aprés avoir effectuer des recherches et réfléchit à son mode de déplacement. Nous avons ensuite utiliser cette modélisation pour faire les plans des pièces qui serons réaliser en atelier à la mains et programmer l'usinage des autres sur les machines à commande numérique. Pour finir chaque membre du groupe choisisais une pièce qu'il réaliserait à l'aide d'un moule, la mienne était la biellette.</p>
-							<p><Strong>Logiciels utilisés</Strong> : Catia Dassault System.</p>
+							<p>Lors de mon BTS, je devais effectuer un projet mécanique en groupe. Ce projet devait être travailler sur la dernière année du BTS et contenir pour chaque personne une pièce à injecter en plastique à l'aide d'un moule industriel. Aprés nous être concertés nous avons décidé de réaliser un robot marcheur fonctionnant grâce à une télécommande.</p>
+							<p>Nous avons choisi de réaliser un robot ayant 6 pattes pour une meilleure stabilité, et ces 6 pattes étaient divisées en 2 groupes contrôlés pour chaque groupe par 1 moteur. Il Fallait donc réfléchir à un schéma cinématique complexe pour le faire avancer avec uniquement 2 moteurs.</p>
+							<p>Pour réaliser ce robot nous l'avons déjà modélisé aprés avoir effectué des recherches et réfléchi à son mode de déplacement. Nous avons ensuite utilisé cette modélisation pour faire les plans des pièces qui seront réalisées en atelier à la main et programmer l'usinage des autres sur les machines à commande numérique. Pour finir chaque membre du groupe choisissait une pièce qu'il réaliserait à l'aide d'un moule, la mienne était la biellette.</p>
+							<p><Strong>Logiciel utilisé</Strong> : Catia Dassault System.</p>
 							<p><Strong>Année de réalisation</Strong> : 2013 - 2014, durant mon BTS CIM.</p>
 						</section>
 					</div>
