correction sous titre

--- a/twocolumn2 - robotmarcheur.html
+++ b/twocolumn2 - robotmarcheur.html
@@ -78,14 +78,14 @@
 					<div id="sidebar" class="3u">
 						<section>
 							<header>
-								<h2>Robot modéliser</h2>
+								<h2>Robot modélisé</h2>
 							</header>
 							<a href="#" class="image full"><img src="images/robot_marcheur_catia.png" alt=""></a>
 							<p>Voici ce à quoi ressemblais notre robot sur notre logiciel de modélisation.</p>
 						</section>
 						<section>
 							<header>
-								<h2>Robot finis</h2>
+								<h2>Robot fini</h2>
 							</header>
 							<a href="#" class="image full"><img src="images/20140616_090915.jpg" alt=""></a>
 							<p>Voici notre robot une fois fini.</p>
