--- a/twocolumn2 - robotmarcheur.html
+++ b/twocolumn2 - robotmarcheur.html
@@ -81,7 +81,7 @@
 								<h2>Robot modélisé</h2>
 							</header>
 							<a href="#" class="image full"><img src="images/robot_marcheur_catia.png" alt=""></a>
-							<p>Voici ce à quoi ressemblais notre robot sur notre logiciel de modélisation.</p>
+							<p>Voici ce à quoi ressemblait notre robot sur notre logiciel de modélisation.</p>
 						</section>
 						<section>
 							<header>
