Ajout de text salon cycle

--- a/twocolumn2 - salonblender.html
+++ b/twocolumn2 - salonblender.html
@@ -66,30 +66,29 @@
 					<div id="content" class="9u skel-cell-important">
 						<section>
 							<header>
-								<h2>Résidence de 40 Studios</h2>
+								<h2>Salon moderne</h2>
 							</header>
-							<p>Lors de ma licence professionnelle, je devais effectuer un stage en entreprise. Je l'ai réalisé dans l'entreprise <a>OMHOVER REALISATIONS</a>. Mon projet était de réaliser un film de présentation d'un bâtiment qui était encore alors en construction. C'est donc à partir de plans fournis par l'architecte que j'ai modélisé entièrement l'intérieur du bâtiment avec l'entrée principale, son forum, le restaurant intérieur et la terrasse extérieure.</p>
-							<p>Dans un deuxième temps j'ai également modélisé l'intérieur d'un des 40 studios que compte cette résidence pour personnes handicapées vieillissantes. Je n'ai  réalisé que l'intérieur d'un seul studio qui sera montré séparément par une coupure dans la vidéo du bâtiment extérieur.</p>
+							<p>Lors de ma licence professionnelle, je devais créé un salon pour la découverte du logiciel gratuit blender. Dans ce cadre il avait également été demandé de réaliser un rendu d'un salon avec le moteur de rendu Cycle, étant un moteur de rendu plus puissant que le moteur de rendu classique de blender, il permets donc de faire des rendu plus réaliste.</p>
+							<p>Malheureusement, le moteur de rendu étant plus puissant il demandais plus de ressource à mon ordinateur qui n'était pas assez puissant pour faire une image net de la scène et ont peut donc voir beaucoup de bruit sur le rendu. Mais malgrés celà j'ai beaucoup appris sur ce moteur de rendu spécifique, comme par exemple UV mapping, j'ai aussi pu faire des tests sur les lumières de la scène ce qui est un domaine trés difficile à rendre réaliste.</p>
 							<p>Lors de la réalisation de ces modélisations j'ai scrupuleusement respecté les plans qui m'étaient fournis. Mais le choix du style et des formes des meubles ont été de ma propre interprétation aprés validation de mon commanditaire.</p>
-							<p><Strong>Logiciels utilisés</Strong> : 3Ds Max Studio, Adobe Photoshop, Adobe Premiere.</p>
-							<p><Strong>Sites utilisés pour les textures</Strong> : CgTexture, CgSkies</p>
-							<p><Strong>Année de réalisation</Strong> : 2015, durant un stage dans un cabinet d'achitecte.</p>
+							<p><Strong>Logiciels utilisés</Strong> : Blender, avec le moteur de rendu Cycle.</p>
+							<p><Strong>Année de réalisation</Strong> : 2014, durant un stage dans un cabinet d'achitecte.</p>
 						</section>
 					</div>
 					<div id="sidebar" class="3u">
 						<section>
 							<header>
-								<h2>Extérieur du bâtiment</h2>
+								<h2>Lumière choisié.</h2>
 							</header>
 							<a href="#" class="image full"><img src="images/Vue exterieur Zoom0600.jpg" alt=""></a>
-							<p>Vue en mode extérieur du bâtiment. Extrait de la vidéo.</p>
+							<p>Voici la couleur et le mode d'illumination que j'ai choisis.</p>
 						</section>
 						<section>
 							<header>
-								<h2>Intérieur d'un studio</h2>
+								<h2>Test de lumière.</h2>
 							</header>
 							<a href="#" class="image full"><img src="images/table-lit.bmp" alt=""></a>
-							<p>Extrait de la vidéo sur l'intérieur du studio ou l'ont peut voir le lit et la table.</p>
+							<p>Exemple d'un des test que j'ai réalisé avec les lumières.</p>
 						</section>
 					</div>
 				</div>
