changement des images

--- a/twocolumn2 - salonblender.html
+++ b/twocolumn2 - salonblender.html
@@ -80,14 +80,14 @@
 							<header>
 								<h2>Lumière choisié.</h2>
 							</header>
-							<a href="#" class="image full"><img src="images/Vue exterieur Zoom0600.jpg" alt=""></a>
+							<a href="#" class="image full"><img src="images/Scene_final_DAUPHIN_Morgane.png" alt=""></a>
 							<p>Voici la couleur et le mode d'illumination que j'ai choisis.</p>
 						</section>
 						<section>
 							<header>
 								<h2>Test de lumière.</h2>
 							</header>
-							<a href="#" class="image full"><img src="images/table-lit.bmp" alt=""></a>
+							<a href="#" class="image full"><img src="images/Scene salon blender cycle lum1.png" alt=""></a>
 							<p>Exemple d'un des test que j'ai réalisé avec les lumières.</p>
 						</section>
 					</div>
