--- a/twocolumn2 - salonblender.html
+++ b/twocolumn2 - salonblender.html
@@ -68,27 +68,27 @@
 							<header>
 								<h2>Salon moderne</h2>
 							</header>
-							<p>Lors de ma licence professionnelle, je devais créé un salon pour la découverte du logiciel gratuit blender. Dans ce cadre il avait également été demandé de réaliser un rendu d'un salon avec le moteur de rendu Cycle, étant un moteur de rendu plus puissant que le moteur de rendu classique de blender, il permets donc de faire des rendu plus réaliste.</p>
-							<p>Malheureusement, le moteur de rendu étant plus puissant il demandais plus de ressource à mon ordinateur qui n'était pas assez puissant pour faire une image net de la scène et ont peut donc voir beaucoup de bruit sur le rendu. Mais malgrés celà j'ai beaucoup appris sur ce moteur de rendu spécifique, comme par exemple UV mapping, j'ai aussi pu faire des tests sur les lumières de la scène ce qui est un domaine trés difficile à rendre réaliste.</p>
+							<p>Lors de ma licence professionnelle, je devais créer un salon pour la découverte du logiciel gratuit Blender. Dans ce cadre, il avait également été demandé de réaliser une modélisation d'un salon avec le moteur de rendu Cycle, ce dernier étant plus puissant et réaliste que le moteur de rendu classique de Blender.</p>
+							<p>Malheureusement, ce moteur de rendu demandait plus de ressources à mon ordinateur qui n'était pas assez puissant pour faire une image nette de la scène et on peut donc voir beaucoup de bruit sur l'image finale. Mais malgré celà j'ai beaucoup appris sur ce moteur de rendu spécifique, comme par exemple UV mapping, j'ai aussi pu faire des tests sur les lumières de la scène ce qui est un domaine trés difficile à rendre réaliste.</p>
 							<p>Lors de la réalisation de ces modélisations j'ai scrupuleusement respecté les plans qui m'étaient fournis. Mais le choix du style et des formes des meubles ont été de ma propre interprétation aprés validation de mon commanditaire.</p>
 							<p><Strong>Logiciels utilisés</Strong> : Blender, avec le moteur de rendu Cycle.</p>
-							<p><Strong>Année de réalisation</Strong> : 2014, durant un stage dans un cabinet d'achitecte.</p>
+							<p><Strong>Année de réalisation</Strong> : 2014, durant mes études à Saint-Dié-des-Vosges en LP ISN.</p>
 						</section>
 					</div>
 					<div id="sidebar" class="3u">
 						<section>
 							<header>
-								<h2>Lumière choisié.</h2>
+								<h2>Lumière choisie.</h2>
 							</header>
 							<a href="#" class="image full"><img src="images/Scene_final_DAUPHIN_Morgane.png" alt=""></a>
-							<p>Voici la couleur et le mode d'illumination que j'ai choisis.</p>
+							<p>Voici la couleur et le mode d'illumination que j'ai choisi.</p>
 						</section>
 						<section>
 							<header>
 								<h2>Test de lumière.</h2>
 							</header>
 							<a href="#" class="image full"><img src="images/Scene salon blender cycle lum1.png" alt=""></a>
-							<p>Exemple d'un des test que j'ai réalisé avec les lumières.</p>
+							<p>Exemple d'un des tests que j'ai réalisé avec les lumières.</p>
 						</section>
 					</div>
 				</div>
