--- a/twocolumn1 - compositing.html
+++ b/twocolumn1 - compositing.html
@@ -85,10 +85,10 @@
 							<header>
 								<h2>Compositing et retouche photo</h2>
 							</header>
-							<p>Le travail de compositing étant trés important aprés un rendu, j'ai donc découvert le compositing avec ce bâtiment, qui n'as pas été réaliser par mes soins, en ajoutant des décors et en modifiant les ombres et lumières du bâtiment gràces au différentes couches.</p>
-							<p>Voici donc le résultat aprés avoir ajouter ici la végétation, modifier une fenêtre, ajouter des personnages avec leurs ombres ainsi pour finir un ciel concordant avec les ombres présente sur le bâtiment.</p>
-							<p>Cette image à été modifiée avec le logiciel : Adobe Photoshop.</p>
-							<p>Année de réalisation de ce projet : 2014, lors de mes études à Saint Diés en LP ISN.</p>
+							<p>Le travail de compositing étant trés important aprés un rendu, j'ai donc découvert le compositing avec ce bâtiment, qui n'a pas été réalisé par mes soins, en ajoutant des décors et en modifiant les ombres et les lumières du bâtiment grâce aux différentes couches.</p>
+							<p>Voici donc le résultat aprés avoir ajouté ici la végétation, modifié une fenêtre, ajouté des personnages avec leurs ombres et pour compléter le tout j'ai ajouté un ciel concordant avec les ombres présentes sur le bâtiment.</p>
+							<p>Cette image a été modifiée avec le logiciel : Adobe Photoshop.</p>
+							<p>Année de réalisation de ce projet : 2014, lors de mes études à Saint-Dié-des-Vosges en LP ISN.</p>
 						</section>
 					</div>
 					
