fin de correction ?

--- a/twocolumn1 - compositing.html
+++ b/twocolumn1 - compositing.html
@@ -69,7 +69,7 @@
 								<h2>Avant</h2>
 							</header>
 							<a href="#" class="image full"><img src="images/compositing avant.png" alt=""></a>
-							<p>Image fournis pour la modification.</p>
+							<p>Image fournie pour la modification.</p>
 						</section>
 						<section>
 							<header>
