--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
 				<div class="row">
 					<section class="3u">
 						<header>
-							<h2>Résidence de 40 studio</h2>
+							<h2>Résidence de 40 studios</h2>
 						</header>
 						<a href="#" class="image full"><img src="images/AFAEDAM_perspective.bmp" alt=""></a>
 						<p>Visite virtuelle, sous forme d'une vidéo, d'un bâtiment de 40 studios modélisés à partir des plans d'architecte.</p>
-						<a href="twocolumn2 - residence.html" class="button">Read More</a>
+						<a href="twocolumn2 - residence.html" class="button">En savoir plus...</a>
 					</section>
 					<section class="3u">
 						<header>
@@ -91,15 +91,15 @@
 						</header>
 						<a href="#" class="image full"><img src="images/Photomontage_DAUPHIN_Morgane.jpg" alt=""></a>
 						<p>Réalisation d'un montage créant un effet d'optique.</p>
-						<a href="twocolumn1 - illusion.html" class="button">Read More</a>
+						<a href="twocolumn1 - illusion.html" class="button">En savoir plus...</a>
 					</section>
 					<section class="3u">
 						<header>
 							<h2>Scène Japonaise</h2>
 						</header>
 						<a href="#" class="image full"><img src="images/RenduBlenderJaponaise.png" alt=""></a>
-						<p>Modélisation d'une scène prenant ploace dans un salon de style japonais donnant sur le jardin de nuit..</p>
-						<a href="twocolumn1 - salonjaponais.html" class="button">Read More</a>
+						<p>Modélisation d'une scène prenant place dans un salon de style japonais donnant sur le jardin de nuit..</p>
+						<a href="twocolumn1 - salonjaponais.html" class="button">En savoir plus...</a>
 					</section>
 					<section class="3u">
 						<header>
@@ -107,7 +107,7 @@
 						</header>
 						<a href="#" class="image full"><img src="images/rendu_maison_DAUPHIN.jpg" alt=""></a>
 						<p>Travail sur le compositing d'une image déja existante, ajout de ciel, végétation, changement des ombres et ajout de personnages.</p>
-						<a href="twocolumn1 - compositing.html" class="button">Read More</a>
+						<a href="twocolumn1 - compositing.html" class="button">En savoir plus...</a>
 					</section>
 				</div>
 			</div>
