Ajout lien vidéo test

--- a/twocolumn1 - salonjaponais.html
+++ b/twocolumn1 - salonjaponais.html
@@ -89,6 +89,8 @@
 							<p>La scène est composée du salon et d'une vue sur le jardin bien que celui-ci soit peu visible à cause des ombres de la nuit. Pour finir j'ai fait une courte animation qui permet de parcourir la scène. </p>
 							<p>Modélisation réalisée avec le logiciel : Blender.</p>
 							<p>Année de réalisation du projet : 2014, durant mes études à Saint-Dié-des-Vosges en LP ISN</p>
+							<p></p>
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/yjv4pZF5L6U" frameborder="0" allowfullscreen></iframe>
 						</section>
 					</div>
 					
