--- a/twocolumn2 - robotmarcheur.html
+++ b/twocolumn2 - robotmarcheur.html
@@ -73,6 +73,8 @@
 							<p>Pour réaliser ce robot nous l'avons déjà modélisé aprés avoir effectué des recherches et réfléchi à son mode de déplacement. Nous avons ensuite utilisé cette modélisation pour faire les plans des pièces qui seront réalisées en atelier à la main et programmer l'usinage des autres sur les machines à commande numérique. Pour finir chaque membre du groupe choisissait une pièce qu'il réaliserait à l'aide d'un moule, la mienne était la biellette.</p>
 							<p><Strong>Logiciel utilisé</Strong> : Catia Dassault System.</p>
 							<p><Strong>Année de réalisation</Strong> : 2013 - 2014, durant mon BTS CIM.</p>
+							<p></p>
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/qJGosthjVWw" frameborder="0" allowfullscreen></iframe>
 						</section>
 					</div>
 					<div id="sidebar" class="3u">
