--- a/index.html
+++ b/index.html
@@ -143,7 +143,8 @@
 		<!-- Copyright -->
 		<div id="copyright">
 			<div class="container">
-				Design: <a href="http://templated.co">TEMPLATED</a> Images: <a href="http://unsplash.com">Unsplash</a> (<a href="http://unsplash.com/cc0">CC0</a>)
+				Copyright &copy; Morgane Dauphin
+				Design: <a href="http://templated.co">TEMPLATED</a>
 			</div>
 		</div>
 	</body>
