--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 		<!-- Copyright -->
 		<div id="copyright">
 			<div class="container">
-				Copyright &copy; Morgane Dauphin
+				<a>Copyright &copy; Morgane Dauphin</a>
 				Design: <a href="http://templated.co">TEMPLATED</a>
 			</div>
 		</div>
