--- a/twocolumn1.html
+++ b/twocolumn1.html
@@ -131,7 +131,8 @@
 		<!-- Copyright -->
 		<div id="copyright">
 			<div class="container">
-				Design: <a href="http://templated.co">TEMPLATED</a> Images: <a href="http://unsplash.com">Unsplash</a> (<a href="http://unsplash.com/cc0">CC0</a>)
+				<a>Copyright &copy; Morgane Dauphin</a>
+				Design: <a href="http://templated.co">TEMPLATED</a>
 			</div>
 		</div>
 	</body>
