changement des textes

--- a/twocolumn1 - chalet.html
+++ b/twocolumn1 - chalet.html
@@ -73,9 +73,9 @@
 						</section>
 						<section>
 							<header>
-								<h2>Aprés retouche</h2>
+								<h2>Image modélisée</h2>
 							</header>
-							<a href="#" class="image full"><img src="images/Photomontage_DAUPHIN_Morgane.jpg" alt=""></a>
+							<a href="#" class="image full"><img src="images/Maison_en_bois2_960x540.jpg" alt=""></a>
 							<p>Résultat finale aprés retouche avec le logiciel Photoshop.</p>
 						</section>
 					</div>
@@ -83,7 +83,7 @@
 					<div id="content" class="9u skel-cell-important">
 						<section>
 							<header>
-								<h2>Illusion d'optique</h2>
+								<h2>Chalet en bois</h2>
 							</header>
 							<p>Dans le cadre de la découverte de photoshop lors de ma Licence Professionnelle Images et Sons Numériques, on nous a demandé de réaliser un montage photo sur le théme de l'illusion d'optique.</p>
 							<p>Aprés avoir effectuer des recherches pour me faire une idée de ce que je pourrais réaliser comme illusion d'optique, je me suis décidée d'en faire une donnant l'impression qu'il y a plusieurs rangées de colonnes alors qu'en réalité, il n'y en a qu'une. Pour cela j'ai pris des chevaux que j'ai découpé à l'endroit des colonnes pour que l'on ait l'impression que ce dernier passe derrière le pilier. J'ai répété cette opértion plusieurs fois pour donner ce résultat. </p>
