Changement des images
changement des images

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 						<header>
 							<h2>Résidence de 40 studios</h2>
 						</header>
-						<a href="#" class="image full"><img src="images/AFAEDAM_perspective.bmp" alt=""></a>
+						<a href="twocolumn2 - residence.html" class="image full"><img src="images/reduit_moitier/AFAEDAM_perspective_moitier.jpg" alt=""></a>
 						<p>Visite virtuelle, sous forme d'une vidéo, d'un bâtiment de 40 studios modélisés à partir des plans d'architecte.</p>
 						<a href="twocolumn2 - residence.html" class="button">En savoir plus...</a>
 					</section>
@@ -89,7 +89,7 @@
 						<header>
 							<h2>Illusion d'optique</h2>
 						</header>
-						<a href="#" class="image full"><img src="images/Photomontage_DAUPHIN_Morgane.jpg" alt=""></a>
+						<a href="twocolumn1 - illusion.html" class="image full"><img src="images/reduit_moitier/Photomontage_DAUPHIN_Morgane_moitier.jpg" alt=""></a>
 						<p>Réalisation d'un montage créant un effet d'optique.</p>
 						<a href="twocolumn1 - illusion.html" class="button">En savoir plus...</a>
 					</section>
@@ -97,17 +97,17 @@
 						<header>
 							<h2>Scène Japonaise</h2>
 						</header>
-						<a href="#" class="image full"><img src="images/RenduBlenderJaponaise.png" alt=""></a>
+						<a href="twocolumn1 - salonjaponais.html" class="image full"><img src="images/reduit_moitier/RenduBlenderJaponaise_moitier.jpg" alt=""></a>
 						<p>Modélisation d'une scène prenant place dans un salon de style japonais donnant sur le jardin de nuit..</p>
 						<a href="twocolumn1 - salonjaponais.html" class="button">En savoir plus...</a>
 					</section>
 					<section class="3u">
 						<header>
-							<h2>Compositing et retouche photo</h2>
+							<h2>Chalet en bois</h2>
 						</header>
-						<a href="#" class="image full"><img src="images/rendu_maison_DAUPHIN.jpg" alt=""></a>
-						<p>Travail sur le compositing d'une image déja existante, ajout de ciel, végétation, changement des ombres et ajout de personnages.</p>
-						<a href="twocolumn1 - compositing.html" class="button">En savoir plus...</a>
+						<a href="twocolumn1 - chalet.html" class="image full"><img src="images/reduit_moitier/Maison_en_bois2_960x540_moitier.jpg" alt=""></a>
+						<p>Travail sur l'arcitecture d'un bâtiment que j'ai imaginée.</p>
+						<a href="twocolumn1 - chalet.html" class="button">En savoir plus...</a>
 					</section>
 				</div>
 			</div>
