Changement des tailles d'images

--- a/twocolumn2 - residence.html
+++ b/twocolumn2 - residence.html
@@ -82,14 +82,14 @@
 							<header>
 								<h2>Extérieur du bâtiment</h2>
 							</header>
-							<a href="#" class="image full"><img src="images/Vue exterieur Zoom0600.jpg" alt=""></a>
+							<a href="#" class="image full"><img src="images/reduit_moitier/Vue exterieur Zoom0600_moitier.jpg" alt=""></a>
 							<p>Vue en mode extérieur du bâtiment. Extrait de la vidéo.</p>
 						</section>
 						<section>
 							<header>
 								<h2>Intérieur d'un studio</h2>
 							</header>
-							<a href="#" class="image full"><img src="images/table-lit.bmp" alt=""></a>
+							<a href="#" class="image full"><img src="images/reduit_moitier/table-lit_moitier.jpg" alt=""></a>
 							<p>Extrait de la vidéo sur l'intérieur du studio ou l'ont peut voir le lit et la table.</p>
 						</section>
 					</div>
@@ -113,10 +113,10 @@
 							<a href="twocolumn1 - illusion.html" class="image full"><img src="images/Photomontage_DAUPHIN_Morgane.jpg" alt=""></a>
 						</section>
 						<section class="4u">
-							<a href="#" class="image full"><img src="images/RenduBlenderJaponaise.png" alt=""></a>
+							<a href="twocolumn1 - salonjaponais.html" class="image full"><img src="images/images/reduit_moitier/RenduBlenderJaponaise_moitier.jpg" alt=""></a>
 						</section>
 						<section class="4u">
-							<a href="twocolumn1 - compositing.html" class="image full"><img src="images/rendu_maison_DAUPHIN.jpg" alt=""></a>
+							<a href="twocolumn1 - compositing.html" class="image full"><img src="images/reduit_moitier/rendu_maison_DAUPHIN_moitier.jpg" alt=""></a>
 						</section>
 					</div>
 					<a href="Gallerie.html" class="button">Gallerie</a>
